cabal-version:  2.2
name:           myocardio
version:        3.0.0
description:    Please see the README on GitHub at <https://github.com/pmiddend/myocardio#readme>
homepage:       https://github.com/pmiddend/myocardio#readme
bug-reports:    https://github.com/pmiddend/myocardio/issues
author:         Philipp Middendorf
maintainer:     pmidden@mailbox.org
copyright:      2024 Philipp Middendorf
license:        GPL-3.0-or-later
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.org

source-repository head
  type: git
  location: https://github.com/pmiddend/myocardio

common shared-properties
  default-language: Haskell2010
  extensions: BlockArguments
            , DeriveGeneric
            , DuplicateRecordFields
            , OverloadedRecordDot
            , OverloadedStrings
            , NoImplicitPrelude
  
executable myocardio-exe
  import: shared-properties
  main-is: Main.hs
  ghc-options: -Weverything -Wno-missing-safe-haskell-mode -Wno-unsafe -Wno-missing-deriving-strategies -Wno-all-missed-specialisations -Wno-monomorphism-restriction -Wno-safe -Wno-missing-local-signatures -Wno-prepositive-qualified-module -threaded -rtsopts -with-rtsopts=-N -Wno-missing-kind-signatures -Wno-missed-specializations
  other-modules: MyocardioApp.Database
               , MyocardioApp.Htmx
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , aeson
    , text
    , time
    , scotty
    , safe
    , directory
    , lucid
